--- a/src/components/ForumPosts/index.css
+++ b/src/components/ForumPosts/index.css
@@ -1,5 +1,10 @@
+.forum-header {
+    margin: 10px auto 0 auto;
+    max-width: 1000px;
+}
+
 .post-button {
-    margin: 5px 0 5px 3px;
+    margin: 5px 0 0 0;
     background: green;
     color: white;
     border: 2px solid lightgray;
